; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuiwindow.c_yui_window_run.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuiwindow.c_yui_window_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }

@YUI_IS_INIT = common dso_local global i32 0, align 4
@YUI_IS_RUNNING = common dso_local global i32 0, align 4
@SCSP_MUTE_SYSTEM = common dso_local global i32 0, align 4
@yui_window_signals = common dso_local global i32* null, align 8
@YUI_WINDOW_RUNNING_SIGNAL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [4 x i8] c"run\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"pause\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @yui_window_run(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = call i32 @yui_window_start(%struct.TYPE_5__* %3)
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @YUI_IS_INIT, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %50

11:                                               ; preds = %1
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @YUI_IS_RUNNING, align 4
  %16 = and i32 %14, %15
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %50

18:                                               ; preds = %11
  %19 = load i32, i32* @SCSP_MUTE_SYSTEM, align 4
  %20 = call i32 @ScspUnMuteAudio(i32 %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @GINT_TO_POINTER(i32 1)
  %25 = call i32 @g_idle_add(i32 %23, i32 %24)
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %27 = call i32 @G_OBJECT(%struct.TYPE_5__* %26)
  %28 = load i32*, i32** @yui_window_signals, align 8
  %29 = load i64, i64* @YUI_WINDOW_RUNNING_SIGNAL, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @g_signal_emit(i32 %27, i32 %31, i32 0)
  %33 = load i32, i32* @YUI_IS_RUNNING, align 4
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = or i32 %36, %33
  store i32 %37, i32* %35, align 4
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @gtk_action_group_get_action(i32 %40, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %42 = load i32, i32* @FALSE, align 4
  %43 = call i32 @gtk_action_set_sensitive(i32 %41, i32 %42)
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @gtk_action_group_get_action(i32 %46, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %48 = load i32, i32* @TRUE, align 4
  %49 = call i32 @gtk_action_set_sensitive(i32 %47, i32 %48)
  br label %50

50:                                               ; preds = %18, %11, %1
  ret void
}

declare dso_local i32 @yui_window_start(%struct.TYPE_5__*) #1

declare dso_local i32 @ScspUnMuteAudio(i32) #1

declare dso_local i32 @g_idle_add(i32, i32) #1

declare dso_local i32 @GINT_TO_POINTER(i32) #1

declare dso_local i32 @g_signal_emit(i32, i32, i32) #1

declare dso_local i32 @G_OBJECT(%struct.TYPE_5__*) #1

declare dso_local i32 @gtk_action_set_sensitive(i32, i32) #1

declare dso_local i32 @gtk_action_group_get_action(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
